--- a/portfolio.html
+++ b/portfolio.html
@@ -9,20 +9,33 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      line-height: 1.5;
+    }
+    p, li {
+      text-align: justify;
+    }
+    .card p {
+      text-align: justify;
+      line-height: 1.5;
+    }
+  </style>
 </head>
 
 <body>
-  <!-- Header (shared) -->
-  <header class="site-header">
-    <div class="container">
-      <a class="brand" href="index.html">Aarya<span>.</span></a>
+<!-- Header (fixed) -->
+<header class="site-header">
+  <div class="container" style="display:flex; align-items:center; justify-content:space-between;">
+    <a class="brand" href="index.html">Aarya<span>.</span></a>
 
-      <nav class="site-nav" aria-label="Primary">
-        <a href="index.html">About</a>
-        <a href="qualifications.html" aria-current="page">Qualifications</a>
-        <a href="portfolio.html">Portfolio</a>
-      </nav>
+    <nav class="site-nav" aria-label="Primary">
+      <a href="index.html">About</a>
+      <a href="qualifications.html" aria-current="page">Qualifications</a>
+      <a href="portfolio.html">Portfolio</a>
+    </nav>
 
+    <div class="header-actions" style="display:flex; gap:10px; align-items:center;">
       <!-- Accent picker -->
       <div class="accent-picker" id="accentPicker" aria-expanded="false">
         <button class="theme-toggle" id="accentToggle" aria-label="Choose accent color" title="Choose accent">
@@ -39,19 +52,20 @@
         </div>
       </div>
 
-
-      <!-- Theme toggle -->
+      <!-- Theme toggle (works with your theme.js) -->
       <button id="themeToggle" class="theme-toggle" aria-label="Toggle color theme" title="Toggle light/dark" aria-pressed="false">
         <svg class="icon-sun" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <circle cx="12" cy="12" r="4" stroke-width="2"/>
           <path stroke-width="2" d="M12 2v2m0 16v2M2 12h2m16 0h2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"/>
         </svg>
-        <svg class="icon-moon" viewBox="0 0 24 24" fill="currentColor">
+        <svg class="icon-moon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
           <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
         </svg>
       </button>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <!-- Hero -->
   <section class="hero">
@@ -75,53 +89,131 @@
   <main class="section">
     <div class="container grid-3" id="projectsGrid">
   
-      <!-- NaviAI -->
-      <article class="card project card--tint-peach" data-tags="ml systems ui">
-        <img class="card__img" src="assets/routes.jpeg" alt="NaviAI route visualization">
-        <h2 class="card__title">NaviAI — Maritime Routing with Risk</h2>
-        <p class="meta">Founder &amp; Lead Engineer · 2024–Present</p>
-        <p>
-          Routing engine that returns <em>fastest</em>, <em>cheapest</em>, and <em>safest</em> routes. Dynamic edge weights fuse time, fuel, weather, and
-          <strong>news-driven risk</strong> from Transformer models; Streamlit UI shows route diffs with LLM rationale.
-        </p>
-        <div class="pills">
-          <span class="pill">Python</span><span class="pill">NetworkX</span><span class="pill">Transformers</span>
-          <span class="pill">Streamlit</span><span class="pill">Pandas</span>
-        </div>
-      </article>
-  
-      <!-- Contract Theory -->
-      <article class="card project card--tint-rose" data-tags="ml">
-        <img class="card__img" src="assets/bilevel_jpeg.png" alt="Bilevel optimization diagram">
-        <h2 class="card__title">Contract Theory — Implicit-Gradient Bilevel</h2>
-        <p class="meta">Deep Learning Research Group · Texas A&amp;M</p>
-        <p>Gradient-based bilevel optimization for principal–agent contract design using HVPs + CG, robust schedules, and grid-search evaluation.</p>
-        <div class="pills">
-          <span class="pill">PyTorch</span><span class="pill">Autograd</span><span class="pill">HVP/CG</span>
-          <span class="pill">Matplotlib</span><span class="pill">LaTeX</span>
-        </div>
-      </article>
-  
-      <!-- Style Converter -->
-      <article class="card project" data-tags="ml ui">
-        <img class="card__img" src="assets/van_gogh.jpeg" alt="Style transfer output">
-        <h2 class="card__title">Style Converter — VGG19 NST</h2>
-        <p class="meta">Simple, clean neural style transfer demo</p>
-        <p>Lightweight PyTorch implementation of neural style transfer with a tidy web UI and visual diffs.</p>
-        <div class="pills">
-          <span class="pill">PyTorch</span><span class="pill">VGG19</span><span class="pill">UX</span>
-        </div>
-      </article>
+   <!-- NaviAI -->
+<article class="card project card--tint-peach" data-tags="ml systems ui">
+  <img class="card__img" src="assets/routes.jpeg" alt="NaviAI route visualization">
+  <h2 class="card__title">NaviAI — Maritime Routing with Risk</h2>
+  <p class="meta">Founder &amp; Lead Engineer · 2025–Present</p>
+  <p>
+    Routing engine that returns <em>fastest</em>, <em>cheapest</em>, and <em>safest</em> routes. Dynamic edge weights fuse transit time,
+    fuel burn, live weather, and <strong>news-driven risk</strong> scored by Transformer models; a Streamlit UI visualizes route
+    diffs and explains trade-offs with concise <strong>LLM rationales</strong> for operator trust.
+  </p>
+  <div class="pills">
+    <span class="pill">Python</span><span class="pill">NetworkX</span><span class="pill">Transformers</span>
+    <span class="pill">Streamlit</span><span class="pill">Pandas</span>
+  </div>
+</article>
+
+<!-- Contract Theory -->
+<article class="card project card--tint-rose" data-tags="ml">
+  <img class="card__img" src="assets/bilevel_jpeg.png" alt="Bilevel optimization diagram">
+  <h2 class="card__title">Contract Theory — Implicit-Gradient Bilevel</h2>
+  <p class="meta">Deep Learning Research Group · Texas A&amp;M</p>
+  <p>
+    Gradient-based bilevel optimizer for principal–agent contracts. Uses <strong>implicit differentiation</strong> with
+    <em>Hessian-vector products</em> and <em>conjugate gradient</em> to update outer variables efficiently; stability comes from
+    tuned schedules and regularization, with a <strong>grid-search baseline</strong> for evaluation and publication-quality
+    convergence plots.
+  </p>
+  <div class="pills">
+    <span class="pill">PyTorch</span><span class="pill">Autograd</span><span class="pill">HVP/CG</span>
+    <span class="pill">Matplotlib</span><span class="pill">LaTeX</span>
+  </div>
+</article>
+
+<!-- Style Converter -->
+<article class="card project" data-tags="ml ui">
+  <img class="card__img" src="assets/van_gogh.jpeg" alt="Style transfer output">
+  <h2 class="card__title">Style Converter — VGG19 NST</h2>
+  <p class="meta">Simple, clean neural style transfer demo</p>
+  <p>
+    Neural Style Transfer that applies an artwork’s <em>style</em> to any photo. Lightweight PyTorch/VGG19 pipeline with a tidy
+    web UI for uploads and <strong>side-by-side previews</strong>; supports content/style weighting and reproducible runs for
+    clear comparisons and demos.
+  </p>
+  <div class="pills">
+    <span class="pill">PyTorch</span><span class="pill">VGG19</span><span class="pill">UX</span>
+  </div>
+</article>
+
   
     </div>
   </main>
   
   <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container">
-      © <span id="year"></span> Aarya Bookseller · Projects &amp; builds.
+  <footer class="site-footer" style="border-top:1px solid var(--ring,#ddd); margin-top:2rem; padding:1.2rem 0; font-size:0.9rem;">
+    <div class="container" style="display:flex; flex-wrap:wrap; align-items:center; justify-content:space-between; gap:0.75rem;">
+      
+      <!-- Left -->
+      <div class="footer-left" style="opacity:0.85;">
+        © <span id="year"></span> Aarya Bookseller · Education &amp; Experience
+      </div>
+  
+      <!-- Right -->
+      <div class="footer-links" style="display:flex; gap:1.25rem; flex-wrap:wrap;">
+        <a href="https://www.linkedin.com/in/aarya-bookseller-b6a8531b7/" target="_blank" rel="noopener">LinkedIn</a>
+  
+        <!-- Work Email with tooltip -->
+        <div class="tooltip">
+          <a href="mailto:aaryab.work@gmail.com">Work Email</a>
+          <span class="tooltip-text">aaryab.work@gmail.com</span>
+        </div>
+  
+        <!-- School Email with tooltip -->
+        <div class="tooltip">
+          <a href="mailto:aaryabookseller@tamu.edu">School Email</a>
+          <span class="tooltip-text">aaryabookseller@tamu.edu</span>
+        </div>
+      </div>
     </div>
   </footer>
+  
+  <style>
+  /* Tooltip wrapper */
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Tooltip box */
+  .tooltip .tooltip-text {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    bottom: 130%; /* shows above the link */
+    left: 50%;
+    transform: translateX(-50%);
+    background: var(--bg-1, #fff);
+    color: var(--text, #000);
+    padding: 6px 10px;
+    border-radius: 6px;
+    font-size: 0.85rem;
+    white-space: nowrap;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    transition: opacity 0.2s ease;
+    z-index: 10;
+  }
+  
+  /* Small arrow below tooltip */
+  .tooltip .tooltip-text::after {
+    content: "";
+    position: absolute;
+    top: 100%; left: 50%;
+    transform: translateX(-50%);
+    border-width: 6px;
+    border-style: solid;
+    border-color: var(--bg-1,#fff) transparent transparent transparent;
+  }
+  
+  /* Show tooltip on hover */
+  .tooltip:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+  }
+  </style>
+  
+  
 
   <!-- Scripts -->
   <script src="theme.js" defer></script>
@@ -141,5 +233,24 @@
     }));
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+  <!-- Back to Top Button -->
+<button id="backToTop" aria-label="Back to top">↑</button>
+
+<script>
+  const backToTop = document.getElementById("backToTop");
+
+  window.addEventListener("scroll", () => {
+    if (window.scrollY > 200) {
+      backToTop.classList.add("show");
+    } else {
+      backToTop.classList.remove("show");
+    }
+  });
+
+  backToTop.addEventListener("click", () => {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  });
+</script>
+
 </body>
 </html>
