Fixed view portfolio button on home page.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
 
             <div class="cta-row" style="margin-top:.8rem;">
-              <a class="btn" href="portfolio.html">View Portfolio</a>
+              <a class="btn btn--ghost" href="portfolio.html">View Portfolio</a>
               <a class="btn btn--ghost" href="qualifications.html">See Qualifications</a>
             </div>
 
