Made some styling changes, fixed AI page, added git to footer, added images to service page, added more external links.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <a href="qualifications.html">Qualifications</a>
         <a href="service.html">Service</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="ai.html">AI-gen</a>
+        <a href="ai.html">Neural Playground</a>
       </nav>
 
       <!-- Accent + Theme -->
@@ -298,6 +298,9 @@
               creatively under constraints. I spend a lot of time reading, too—especially books that offer new lenses on
               technology, psychology, and history:
               <a href="https://www.goodreads.com/user/show/154264554-aarya-bookseller" target="_blank" rel="noreferrer">Goodreads →</a>
+              <br />
+              And since I love EDM, here’s my current playlist:
+              <a href="https://open.spotify.com/playlist/7qiB9KkmpEi2ZJ8PLfEYsA?si=80c2eace6bd943e4" target="_blank" rel="noreferrer">Spotify →</a>
             </p>
           </article>
 
@@ -325,33 +328,73 @@
   </main>
 
   <!-- ===== FOOTER ===== -->
-  <footer class="site-footer" style="border-top:1px solid var(--ring,#ddd); margin-top:2rem; padding:1.2rem 0; font-size:0.9rem;">
-    <div class="container" style="display:flex; flex-wrap:wrap; align-items:center; justify-content:space-between; gap:0.75rem;">
-      <div class="footer-left" style="opacity:0.85;">
-        © <span id="year"></span> Aarya Bookseller
-      </div>
-
-      <div class="footer-links" style="display:flex; gap:1.25rem; flex-wrap:wrap; font-size:1.3rem;">
-        <a href="https://www.linkedin.com/in/aarya-bookseller-b6a8531b7/" target="_blank" rel="noopener" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </a>
-
-        <span class="tooltip">
-          <a href="mailto:aaryab.work@gmail.com" aria-label="Work Email">
-            <i class="fas fa-envelope"></i>
-          </a>
-          <span class="tooltip-text">aaryab.work@gmail.com</span>
-        </span>
-
-        <span class="tooltip">
-          <a href="mailto:aaryabookseller@tamu.edu" aria-label="School Email">
-            <img src="assets/tamu.png" alt="TAMU logo" style="width:22px; height:22px; object-fit:contain; vertical-align:middle;">
-          </a>
-          <span class="tooltip-text">aaryabookseller@tamu.edu</span>
-        </span>
-      </div>
+<footer class="site-footer" style="border-top:1px solid var(--ring,#ddd); margin-top:2rem; padding:1.2rem 0; font-size:0.9rem;">
+  <div class="container" style="display:flex; flex-wrap:wrap; align-items:center; justify-content:space-between; gap:0.75rem;">
+    
+    <!-- Left text -->
+    <div class="footer-left" style="opacity:0.85;">
+      © <span id="year"></span> Aarya Bookseller
     </div>
-  </footer>
+
+    <!-- Right links -->
+    <div class="footer-links" style="display:flex; gap:1.25rem; flex-wrap:wrap; font-size:1.3rem;">
+      
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/in/aarya-bookseller-b6a8531b7/" target="_blank" rel="noopener" aria-label="LinkedIn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M4.98 3.5C4.98 5 3.9 6 2.5 6S0 5 0 3.5 1.1 1 2.5 1s2.48 1 2.48 2.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-8c0-1.9 0-4.3-2.6-4.3-2.6 0-3 2-3 4.2V24h-4V8z"/>
+        </svg>
+      </a>
+
+      <!-- Work Email -->
+      <span class="tooltip">
+        <a href="mailto:aaryab.work@gmail.com" aria-label="Work Email">
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M20 4H4c-1.1 0-2 .9-2 
+                     2v12c0 1.1.9 2 2 
+                     2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 
+                     4-8 5-8-5V6l8 
+                     5 8-5v2z"/>
+          </svg>
+        </a>
+        <span class="tooltip-text">aaryab.work@gmail.com</span>
+      </span>
+
+      <!-- School Email -->
+      <span class="tooltip">
+        <a href="mailto:aaryabookseller@tamu.edu" aria-label="School Email">
+          <img src="assets/tamu.png" alt="TAMU logo" style="width:22px; height:22px; object-fit:contain; vertical-align:middle;">
+        </a>
+        <span class="tooltip-text">aaryabookseller@tamu.edu</span>
+      </span>
+
+      <!-- GitHub -->
+      <a href="https://github.com/aaryabookseller16" target="_blank" aria-label="GitHub">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M12 .297c-6.63 0-12 
+                   5.373-12 12 0 5.303 3.438 
+                   9.8 8.205 11.385.6.113.82-.258.82-.577 
+                   0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61 
+                   -.546-1.387-1.333-1.757-1.333-1.757-1.089-.744.083-.729.083-.729 
+                   1.205.084 1.84 1.236 1.84 1.236 
+                   1.07 1.835 2.809 1.305 3.495.998 
+                   .108-.776.418-1.305.762-1.605-2.665-.305-5.466-1.335-5.466-5.93 
+                   0-1.31.469-2.381 1.236-3.221-.124-.303-.536-1.524.117-3.176 
+                   0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 
+                   1.02.005 2.047.138 3.006.404 2.291-1.552 
+                   3.297-1.23 3.297-1.23.655 1.653.243 
+                   2.874.119 3.176.77.84 1.235 1.911 
+                   1.235 3.221 0 4.609-2.804 
+                   5.624-5.475 5.921.43.372.823 
+                   1.102.823 2.222 0 1.606-.014 
+                   2.896-.014 3.286 0 .319.216.694.825.576C20.565 
+                   22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
+        </svg>
+      </a>
+
+    </div>
+  </div>
+</footer>
 
   <!-- Back to Top -->
   <button id="backToTop" aria-label="Back to top" title="Back to top">↑</button>
