--- a/ai.html
+++ b/ai.html
@@ -29,6 +29,12 @@
       };
     })();
   </script>
+  <!-- Alias so other pages/scripts can call the same helper -->
+  <script>
+    if (!window.__setThemeDataAttr) {
+      window.__setThemeDataAttr = (t) => window.__setTheme?.(t);
+    }
+  </script>
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -142,6 +148,12 @@
       background: color-mix(in oklab, var(--ai-bg1) 85%, transparent);
       cursor: pointer;
     }
+    /* Minimal icon swap for theme toggle */
+    .theme-toggle .icon-sun { display: inline; }
+    .theme-toggle .icon-moon { display: none; }
+    [data-theme="dark"] .theme-toggle .icon-sun { display: none; }
+    [data-theme="dark"] .theme-toggle .icon-moon { display: inline; }
+
     .accent-picker { position: relative; }
     .accent-menu{
       position: absolute; right: 0; top: 110%; z-index: 10; display: grid; gap: 6px;
@@ -250,7 +262,7 @@
         <a href="qualifications.html">Qualifications</a>
         <a href="service.html">Service</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="ai.html" aria-current="page">AI-gen</a>
+        <a href="ai.html" aria-current="page">Neural Playground</a>
       </nav>
 
       <div class="header-actions" style="display:flex; gap:10px; align-items:center;">
@@ -269,7 +281,7 @@
         </div>
 
         <!-- Theme toggle -->
-        <button id="themeToggle" class="theme-toggle" aria-label="Toggle color theme" title="Toggle light/dark" aria-pressed="false">
+        <button id="theme-toggle" class="theme-toggle" aria-label="Toggle color theme" title="Toggle light/dark" aria-pressed="false">
           <svg class="icon-sun" viewBox="0 0 24 24" fill="none" stroke="currentColor" aria-hidden="true" width="20" height="20">
             <circle cx="12" cy="12" r="4" stroke-width="2"/>
             <path stroke-width="2" d="M12 2v2m0 16v2M2 12h2m16 0h2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"/>
@@ -284,15 +296,20 @@
 
   <!-- Hero -->
   <section class="ai-hero" aria-describedby="lead">
-    <div class="ai-hero-wrap">
-      <p class="ai-kicker">Interactive</p>
-      <h1 class="ai-title">Neural Kaleidoscope</h1>
-      <p id="lead" class="ai-lead">
-        A lightweight sketch of <strong>transformer attention</strong>. Tokens light up and connect across layers.
-        Hover to focus columns or use the controls to tweak <em>tokens</em>, <em>layers</em>, <em>speed</em>, and <em>density</em>.
-      </p>
-    </div>
-  </section>
+  <div class="ai-hero-wrap">
+    <p class="ai-kicker">Interactive</p>
+    <h1 class="ai-title">Neural Kaleidoscope</h1>
+    <p id="lead" class="ai-lead">
+      A lightweight sketch of <strong>transformer attention</strong>. Tokens light up and connect across layers.
+      Hover to focus columns or use the controls to tweak <em>tokens</em>, <em>layers</em>, <em>speed</em>, and <em>density</em>.
+    </p>
+    <p class="ai-ref">
+      Based on the paper 
+      <a href="https://arxiv.org/abs/1706.03762" target="_blank" rel="noreferrer">
+        “Attention Is All You Need” →</a>
+    </p>
+  </div>
+</section>
 
   <!-- Floating controls -->
   <div class="controls" role="toolbar" aria-label="Animation controls">
@@ -324,7 +341,7 @@
 
   <!-- Footer -->
   <footer class="site-footer">
-    © <span id="year"></span> Aarya Bookseller · AI-gen
+    © <span id="year"></span> Aarya Bookseller · Neural Playground
   </footer>
 
   <!-- ===== ALL SCRIPTS (inline) ===== -->
@@ -375,18 +392,28 @@
       });
     })();
 
-    // Theme toggle
+    // Theme toggle (fixed: uses #theme-toggle and shared helper)
     (() => {
-      const btn = document.getElementById('themeToggle');
+      const btn = document.getElementById('theme-toggle');
       if (!btn) return;
-      const setPressed = () => btn.setAttribute('aria-pressed', String((document.documentElement.getAttribute('data-theme')||'light') === 'dark'));
+
+      const getTheme = () => document.documentElement.getAttribute('data-theme') || 'light';
+      const setPressed = () => btn.setAttribute('aria-pressed', String(getTheme() === 'dark'));
+
+      // init
       setPressed();
+
+      // click → flip theme
       btn.addEventListener('click', () => {
-        const cur = document.documentElement.getAttribute('data-theme') || 'light';
-        const next = cur === 'dark' ? 'light' : 'dark';
-        window.__setTheme(next);
+        const next = getTheme() === 'dark' ? 'light' : 'dark';
+        (window.__setThemeDataAttr || window.__setTheme)?.(next);
         setPressed();
       });
+
+      // keep in sync if theme changes elsewhere
+      const sync = () => setPressed();
+      document.documentElement.addEventListener('themechange', sync);
+      window.addEventListener('themechange', sync);
     })();
 
     // Header scroll + canvas parallax & header height sync
