--- a/service.html
+++ b/service.html
@@ -108,7 +108,7 @@
         <a href="qualifications.html">Qualifications</a>
         <a href="service.html" aria-current="page">Service</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="ai.html">AI-gen</a>
+        <a href="ai.html">Neural Playground</a>
       </nav>
 
       <!-- Accent + Theme -->
@@ -156,68 +156,152 @@
   <main class="section">
     <div class="container">
       <div class="grid cards">
-        <!-- American Red Cross (full-card link) -->
-        <a class="card card--tint-blue" href="https://tamu-arc.wixsite.com/redcrosstamu" target="_blank" rel="noopener">
-          <h3>American Red Cross</h3>
-          <p>
-            Supported local blood drives and disaster-preparedness campaigns. Assisted with donor registration, traffic flow,
-            and safety protocols during high-volume events. Gained practical exposure to crisis response and learned to
-            communicate clearly under pressure while coordinating between staff, volunteers, and donors.
-          </p>
-        </a>
+      <!-- American Red Cross (full-card link) -->
+      <a class="card card--tint-blue" href="https://tamu-arc.wixsite.com/redcrosstamu" target="_blank" rel="noopener">
+        <img src="assets/red_cross.jpg" alt="Red Cross volunteering event" class="card-img">
+        <h3>American Red Cross</h3>
+        <p>
+          Supported local blood drives and disaster-preparedness campaigns. Assisted with donor registration, traffic flow,
+          and safety protocols during high-volume events. Gained practical exposure to crisis response and learned to
+          communicate clearly under pressure while coordinating between staff, volunteers, and donors.
+        </p>
+        <p class="card-link">🌐 Visit Website →</p>
+      </a>
 
-        <!-- STEM Tutoring -->
-        <article class="card card--tint-rose">
-          <h3>STEM Tutoring</h3>
-          <p>
-            Tutored middle-school students in math, programming, and computer science fundamentals. Designed problem sets,
-            guided debugging exercises, and focused on building long-term confidence. Connected abstract concepts to
-            real-world examples to foster curiosity and encourage pathways into STEM.
-          </p>
-        </article>
+      <!-- STEM Tutoring -->
+      <article class="card card--tint-rose">
+        <img src="assets/tutoring.jpg" alt="Tutoring session with students" class="card-img">
+        <h3>STEM Tutoring</h3>
+        <p>
+          Tutored middle-school students in math, programming, and computer science fundamentals. Designed problem sets,
+          guided debugging exercises, and focused on building long-term confidence. Connected abstract concepts to
+          real-world examples to foster curiosity and encourage pathways into STEM.
+        </p>
+      </article>
 
-        <!-- Aggieland Humane Society (full-card link) -->
-        <a class="card" href="https://aggielandhumane.org/" target="_blank" rel="noopener">
-          <h3>Aggieland Humane Society</h3>
-          <p>
-            Volunteered at adoption events and animal-care facilities, assisting with feeding, exercise, and socialization.
-            Helped families through the adoption process by sharing resources and answering questions. Developed a deeper
-            sense of responsibility and compassion through service to local pets and their future owners.
-          </p>
-        </a>
+      <!-- Aggieland Humane Society -->
+      <a class="card card--tint-green" href="https://aggielandhumane.org/" target="_blank" rel="noopener">
+        <img src="assets/kittens.jpg" alt="Cute kittens at Humane Society" class="card-img">
+        <h3>Aggieland Humane Society</h3>
+        <p>
+          Volunteered at adoption events and animal-care facilities, assisting with feeding, exercise, and socialization.
+          Helped families through the adoption process by sharing resources and answering questions. Developed a deeper
+          sense of responsibility and compassion through service to local pets and their future owners.
+        </p>
+        <p class="card-link">🌐 Visit Website →</p>
+      </a>
+    </div>
+
+    <style>
+      .card {
+        display: block;
+        text-decoration: none;
+        color: inherit;
+        border: 1px solid #ddd;
+        border-radius: 12px;
+        padding: 0; /* reset so images align */
+        overflow: hidden;
+        transition: transform 0.2s, box-shadow 0.2s, border-color 0.2s;
+        background: var(--bg-1, #fff);
+      }
+
+      .card img.card-img {
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+        display: block;
+      }
+
+      .card h3, .card p {
+        padding: 0 16px;
+      }
+
+      .card p:last-child {
+        margin-bottom: 16px;
+      }
+
+      .card:hover {
+        transform: translateY(-6px);
+        box-shadow: 0 8px 18px rgba(0, 0, 0, 0.18);
+        border-color: #aaa;
+      }
+
+      .card-link {
+        font-weight: 600;
+        color: #0a66c2;
+        margin-top: 8px;
+      }
+    </style>
       </div>
     </div>
   </main>
 
-  <!-- Footer -->
-  <footer class="site-footer" style="border-top:1px solid var(--ring,#ddd); margin-top:2rem; padding:1.2rem 0; font-size:0.9rem;">
-    <div class="container" style="display:flex; flex-wrap:wrap; align-items:center; justify-content:space-between; gap:0.75rem;">
-      <div class="footer-left" style="opacity:0.85;">
-        © <span id="year"></span> Aarya Bookseller · Service
-      </div>
-
-      <div class="footer-links" style="display:flex; gap:1.25rem; flex-wrap:wrap; font-size:1.3rem;">
-        <!-- LinkedIn -->
-        <a href="https://www.linkedin.com/in/aarya-bookseller-b6a8531b7/" target="_blank" rel="noopener" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </a>
-
-        <!-- Work Email -->
-        <div class="tooltip">
-          <a href="mailto:aaryab.work@gmail.com" aria-label="Work Email">
-            <i class="fas fa-envelope"></i>
-          </a>
-        </div>
-
-        <!-- School Email with TAMU logo -->
-        <div class="tooltip">
-          <a href="mailto:aaryabookseller@tamu.edu" aria-label="School Email">
-            <img src="assets/tamu.png" alt="TAMU logo" style="width:22px; height:22px; object-fit:contain; vertical-align:middle;">
-          </a>
-        </div>
-      </div>
+  <!-- ===== FOOTER ===== -->
+<footer class="site-footer" style="border-top:1px solid var(--ring,#ddd); margin-top:2rem; padding:1.2rem 0; font-size:0.9rem;">
+  <div class="container" style="display:flex; flex-wrap:wrap; align-items:center; justify-content:space-between; gap:0.75rem;">
+    
+    <!-- Left text -->
+    <div class="footer-left" style="opacity:0.85;">
+      © <span id="year"></span> Aarya Bookseller
     </div>
-  </footer>
+
+    <!-- Right links -->
+    <div class="footer-links" style="display:flex; gap:1.25rem; flex-wrap:wrap; font-size:1.3rem;">
+      
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/in/aarya-bookseller-b6a8531b7/" target="_blank" rel="noopener" aria-label="LinkedIn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M4.98 3.5C4.98 5 3.9 6 2.5 6S0 5 0 3.5 1.1 1 2.5 1s2.48 1 2.48 2.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-8c0-1.9 0-4.3-2.6-4.3-2.6 0-3 2-3 4.2V24h-4V8z"/>
+        </svg>
+      </a>
+
+      <!-- Work Email -->
+      <span class="tooltip">
+        <a href="mailto:aaryab.work@gmail.com" aria-label="Work Email">
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M20 4H4c-1.1 0-2 .9-2 
+                     2v12c0 1.1.9 2 2 
+                     2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 
+                     4-8 5-8-5V6l8 
+                     5 8-5v2z"/>
+          </svg>
+        </a>
+      </span>
+
+      <!-- School Email -->
+      <span class="tooltip">
+        <a href="mailto:aaryabookseller@tamu.edu" aria-label="School Email">
+          <img src="assets/tamu.png" alt="TAMU logo" style="width:22px; height:22px; object-fit:contain; vertical-align:middle;">
+        </a>
+      </span>
+
+      <!-- GitHub -->
+      <a href="https://github.com/aaryabookseller16" target="_blank" aria-label="GitHub">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M12 .297c-6.63 0-12 
+                   5.373-12 12 0 5.303 3.438 
+                   9.8 8.205 11.385.6.113.82-.258.82-.577 
+                   0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61 
+                   -.546-1.387-1.333-1.757-1.333-1.757-1.089-.744.083-.729.083-.729 
+                   1.205.084 1.84 1.236 1.84 1.236 
+                   1.07 1.835 2.809 1.305 3.495.998 
+                   .108-.776.418-1.305.762-1.605-2.665-.305-5.466-1.335-5.466-5.93 
+                   0-1.31.469-2.381 1.236-3.221-.124-.303-.536-1.524.117-3.176 
+                   0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 
+                   1.02.005 2.047.138 3.006.404 2.291-1.552 
+                   3.297-1.23 3.297-1.23.655 1.653.243 
+                   2.874.119 3.176.77.84 1.235 1.911 
+                   1.235 3.221 0 4.609-2.804 
+                   5.624-5.475 5.921.43.372.823 
+                   1.102.823 2.222 0 1.606-.014 
+                   2.896-.014 3.286 0 .319.216.694.825.576C20.565 
+                   22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
+        </svg>
+      </a>
+
+    </div>
+  </div>
+</footer>
 
   <!-- Back to Top -->
   <button id="backToTop" aria-label="Back to top">↑</button>
